--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "dashboard-ft",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -46,13 +46,13 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
-    "next-themes": "^0.4.4",
+    "next-themes": "latest",
     "react": "^19",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.0",
+    "recharts": "latest",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -64,11 +64,14 @@
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/material-pigment-css": "latest",
+    "chart.js": "latest",
     "@hello-pangea/dnd": "latest",
     "framer-motion": "latest",
     "@mui/material": "latest",
     "jspdf": "latest",
-    "html2canvas": "latest"
+    "html2canvas": "latest",
+    "react-chartjs-2": "latest",
+    "@faker-js/faker": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
