--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "latest",
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@faker-js/faker": "latest",
+    "@hello-pangea/dnd": "latest",
     "@hookform/resolvers": "latest",
+    "@mui/material": "latest",
+    "@mui/material-pigment-css": "latest",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -37,18 +44,25 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "autoprefixer": "^10.4.20",
+    "chart.js": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "latest",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "latest",
+    "html2canvas": "latest",
     "input-otp": "1.4.1",
+    "jspdf": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "latest",
     "react": "^19",
-    "react-day-picker": "latest",
+    "react-chartjs-2": "latest",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19",
     "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
@@ -57,21 +71,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@emotion/is-prop-valid": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@mui/material-pigment-css": "latest",
-    "chart.js": "latest",
-    "@hello-pangea/dnd": "latest",
-    "framer-motion": "latest",
-    "@mui/material": "latest",
-    "jspdf": "latest",
-    "html2canvas": "latest",
-    "react-chartjs-2": "latest",
-    "@faker-js/faker": "latest"
+    "zod": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
