--- a/package.json
+++ b/package.json
@@ -53,19 +53,26 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
+    "docx-preview": "^0.3.6",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
-    "html2canvas": "latest",
+    "html-pdf-node": "^1.0.8",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
-    "jspdf": "latest",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.10.0",
     "next": "15.1.0",
     "next-themes": "latest",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.149",
     "react": "^19",
     "react-chartjs-2": "latest",
     "react-day-picker": "^8.10.1",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^19",
     "react-hook-form": "latest",
+    "react-pdf": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.1",
