--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -17,6 +20,8 @@
     "@hookform/resolvers": "latest",
     "@mui/material": "latest",
     "@mui/material-pigment-css": "latest",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -48,6 +53,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "chart.js": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,13 +65,16 @@
     "html-pdf-node": "^1.0.8",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
     "mammoth": "^1.10.0",
     "next": "15.1.0",
+    "next-auth": "^4.24.11",
     "next-themes": "latest",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.149",
+    "prisma": "^6.16.2",
     "react": "^19",
     "react-chartjs-2": "latest",
     "react-day-picker": "^8.10.1",
@@ -79,7 +88,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -87,6 +96,10 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.5",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
