--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
