feat: add program study (prodi) management scripts and data
- Created a JSON template for program study data (prodi-data.json).
- Implemented fetch-prodi.ts to generate the prodi data template.
- Developed import-prodi.ts to import prodi data from JSON into the database.
- Added seed-prodi.ts for seeding initial prodi data into the database.
- Introduced sync-prodi.ts to synchronize prodi data from existing students in the database.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
-    "generate:lab-template": "tsx scripts/generate-lab-template.ts"
+    "generate:lab-template": "tsx scripts/generate-lab-template.ts",
+    "sync:prodi": "tsx scripts/sync-prodi.ts",
+    "seed:prodi": "tsx scripts/seed-prodi.ts",
+    "fetch:prodi": "tsx scripts/fetch-prodi.ts",
+    "import:prodi": "tsx scripts/import-prodi.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
