--- a/.hintrc
+++ b/.hintrc
@@ -5,6 +5,12 @@
   "hints": {
     "axe/name-role-value": "off",
     "button-type": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off"
+      }
+    ]
   }
 }
