--- a/package.json
+++ b/package.json
@@ -6,17 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:seed-all": "tsx prisma/seed-all.ts",
-    "seed:master-data": "tsx prisma/seeds/master-data-seed.ts",
-    "generate:lab-template": "tsx scripts/generate-lab-template.ts",
-    "sync:prodi": "tsx scripts/sync-prodi.ts",
-    "seed:prodi": "tsx scripts/seed-prodi.ts",
-    "fetch:prodi": "tsx scripts/fetch-prodi.ts",
-    "import:prodi": "tsx scripts/import-prodi.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -31,8 +21,6 @@
     "@hookform/resolvers": "latest",
     "@mui/material": "latest",
     "@mui/material-pigment-css": "latest",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.17.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -113,12 +101,8 @@
     "@types/react-dom": "^19",
     "@types/xlsx": "^0.0.36",
     "postcss": "^8",
-    "prisma": "^6.17.1",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "^5"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
   }
 }
