--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "jspdf": "^3.0.2",
     "lucide-react": "^0.544.0",
     "mammoth": "^1.10.0",
+    "moment": "^2.30.1",
+    "moment-hijri": "^3.0.0",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
