feat: Implement library actions for managing books, borrowed books, and thesis titles
- Added functions to fetch library data, thesis titles, and thesis submissions.
- Implemented data transformation for books and thesis titles.
- Added error handling for fetching data.
- Created mock data for testing purposes.

feat: Create payment actions for managing payment history and items

- Implemented functions to retrieve payment history, upcoming payments, and recent payments.
- Added functionality to submit payments and retrieve unpaid payment items.
- Created mock data for payment history and items.

feat: Develop schedule actions for managing student schedules and events

- Added functions to fetch student schedule data including academic events and weekly schedules.
- Implemented data transformation for schedule events.
- Added error handling for fetching schedule data.

feat: Enhance student actions for dashboard data retrieval

- Implemented function to fetch student dashboard data including grades, payments, and upcoming deadlines.
- Added logic to calculate current semester courses and credits.
- Enhanced notifications retrieval for students.

feat: Implement next number generation for letter types

- Added function to generate preview of next letter numbers based on current counters.
- Implemented error handling for fetching next letter numbers.

--- a/package.json
+++ b/package.json
@@ -85,17 +85,17 @@
     "mammoth": "^1.10.0",
     "moment": "^2.30.1",
     "moment-hijri": "^3.0.0",
-    "next": "15.1.0",
+    "next": "^14.2.18",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.149",
     "qrcode": "^1.5.4",
-    "react": "^19",
+    "react": "^18.3.1",
     "react-chartjs-2": "latest",
     "react-day-picker": "^8.10.1",
     "react-doc-viewer": "^0.1.14",
-    "react-dom": "^19",
+    "react-dom": "^18.3.1",
     "react-hook-form": "latest",
     "react-pdf": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
