--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
+    "db:seed-production": "tsx prisma/seed-production.ts",
     "db:seed-all": "tsx prisma/seed-all.ts",
     "seed:master-data": "tsx prisma/seeds/master-data-seed.ts",
+    "seed:letter-types": "tsx scripts/seed-letter-master-data.ts",
+    "seed:student": "tsx scripts/seed-single-student.ts",
+    "fetch:students": "tsx scripts/fetch-students-sinta.ts",
     "generate:lab-template": "tsx scripts/generate-lab-template.ts",
     "sync:prodi": "tsx scripts/sync-prodi.ts",
     "seed:prodi": "tsx scripts/seed-prodi.ts",
