feat: Implement document verification page with QR code and digital signature functionality
- Added VerificationPage component for verifying documents using QR codes and signatures.
- Integrated API call to fetch verification results based on document data and signature.
- Enhanced UI with loading states, success/error messages, and detailed document information.
- Created reusable components for signing documents, displaying signature status, and viewing QR codes.
- Implemented file upload functionality to MinIO with error handling and user feedback.
- Developed utility functions for generating QR codes and managing digital signatures.
- Established MinIO client configuration and bucket management for file storage.
- Added tests for MinIO connection and functionality to ensure proper integration.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "seed:prodi": "tsx scripts/seed-prodi.ts",
     "fetch:prodi": "tsx scripts/fetch-prodi.ts",
     "import:prodi": "tsx scripts/import-prodi.ts",
-    "minio:start": "docker-compose -f docker-compose.minio.yml up -d",
-    "minio:stop": "docker-compose -f docker-compose.minio.yml down",
-    "minio:logs": "docker-compose -f docker-compose.minio.yml logs -f"
+    "minio:test": "npx tsx --env-file=.env scripts/test-minio.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -122,6 +120,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/xlsx": "^0.0.36",
+    "dotenv": "^17.2.3",
     "postcss": "^8",
     "prisma": "^6.17.1",
     "tailwindcss": "^3.4.17",
