--- a/package.json
+++ b/package.json
@@ -76,11 +76,15 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
+    "docx": "^9.5.1",
     "docx-preview": "^0.3.6",
+    "docxtemplater": "^3.67.4",
     "embla-carousel-react": "8.5.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "latest",
     "graphql": "^16.11.0",
     "graphql-request": "^7.3.1",
+    "html-docx-js-typescript": "^0.1.5",
     "html-pdf-node": "^1.0.8",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
@@ -96,6 +100,7 @@
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.149",
+    "pizzip": "^3.2.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-chartjs-2": "latest",
@@ -114,6 +119,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
