--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.2",
+    "jspdf": "^3.0.4",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.544.0",
     "mammoth": "^1.10.0",
     "minio": "^8.0.6",
