feat: Implement admin statistics API, user management, and super admin dashboard
- Added GET endpoint for admin statistics with detailed user counts and recent activities.
- Implemented bulk user management API for activating, deactivating, deleting, changing roles, and resetting passwords.
- Created user creation API with validation and role-specific data handling.
- Developed Create User dialog component for admin interface with form validation and data submission.
- Built Super Admin Dashboard to display user statistics, system stats, and recent user activities.
- Seeded database with a default super admin account for initial setup.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "seed:prodi": "tsx scripts/seed-prodi.ts",
     "fetch:prodi": "tsx scripts/fetch-prodi.ts",
     "import:prodi": "tsx scripts/import-prodi.ts",
-    "minio:test": "npx tsx --env-file=.env scripts/test-minio.ts"
+    "minio:test": "npx tsx --env-file=.env scripts/test-minio.ts",
+    "seed:super-admin": "tsx prisma/seeds/super-admin-seed.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
