feat: remove deprecated files and add official backup for prodi master data
- Deleted surat.txt and tujuan.txt as they are no longer needed.
- Added PRODI_MASTER_BACKUP.md containing official prodi data and usage instructions.
- Created prodi-master-default.ts for seeding prodi master data with detailed comments.
- Updated documentation in README.md to reflect changes and provide guidance on seeding data.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:seed-production": "tsx prisma/seed-production.ts",
     "seed:master-data": "tsx prisma/seeds/master-data-seed.ts",
+    "seed:prodi-master": "tsx prisma/seeds/prodi-master-default.ts",
     "seed:letter-types": "tsx scripts/seed-letter-master-data.ts",
     "seed:student": "tsx scripts/seed-single-student.ts",
     "fetch:students": "tsx scripts/fetch-students-sinta.ts",
