feat: update terminology from "Layanan Surat" to "Surat dan Dokumen" across the application
- Changed titles and descriptions in Master Data and Correspondence pages to reflect new terminology.
- Updated metadata for Staff Correspondence Page.
- Modified labels and headings in Mahasiswa and Student Correspondence components.
- Adjusted menu items for mahasiswa, staff TU, and prodi to use the new terminology.
- Added new Templates page for managing document templates with appropriate UI components.
- Implemented seeding script for Admin Prodi with updated role and naming conventions.
- Enhanced database schema to support new document management features.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "minio:test": "npx tsx --env-file=.env scripts/test-minio.ts",
     "seed:super-admin": "tsx prisma/seeds/super-admin-seed.ts",
     "seed:counters": "tsx scripts/seed-letter-counters.ts",
+    "seed:admin-prodi": "tsx scripts/seed-admin-prodi.ts",
     "letter-counters": "tsx scripts/show-letter-counters.ts"
   },
   "dependencies": {
