--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "seed:counters": "tsx scripts/seed-letter-counters.ts",
     "seed:admin-prodi": "tsx scripts/seed-admin-prodi.ts",
     "seed:lab-admins": "tsx scripts/seed-laboratory-admins.ts",
+    "fix:lab-admins": "tsx scripts/fix-laboratory-admins-prodi.ts",
+    "check:lab-certs": "tsx scripts/check-lab-certificates-prodi.ts",
+    "fix:lab-certs": "tsx scripts/fix-lab-certificates-prodi.ts",
     "letter-counters": "tsx scripts/show-letter-counters.ts"
   },
   "dependencies": {
