--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "html-docx-js-typescript": "^0.1.5",
     "html-pdf-node": "^1.0.8",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
@@ -124,6 +125,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
