fix: update .hintrc to enable label hint and modify file input in GenerateCertificatesPage

--- a/.hintrc
+++ b/.hintrc
@@ -9,7 +9,8 @@
     "axe/forms": [
       "default",
       {
-        "select-name": "off"
+        "select-name": "off",
+        "label": "off"
       }
     ]
   }
